// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`nav bar handles successful logout 1`] = `
.c3 {
  max-height: 50px;
  padding: 12px;
  border: none;
  border-radius: 5px;
  color: white;
  font-family: 'B612',sans-serif;
  font-size: 1rem;
  font-weight: 700;
  cursor: pointer;
}

.c3:hover {
  opacity: 0.90;
}

.c3:focus {
  outline: none;
}

.c3:active {
  opacity: 0.80;
}

.c3:disabled:hover {
  opacity: 1;
  cursor: auto;
}

.c4 {
  background-color: transparent;
  border: 1px solid;
}

.c1 {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:hover {
  opacity: 0.90;
}

.c0 {
  height: 50px;
  padding: 16px;
  display: grid;
  grid-template-columns: 1fr 8fr [logout];
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  margin-right: 16px;
}

.c5 {
  grid-column: logout;
  float: right;
  width: 100px;
  height: 75%;
}

<div
  className="c0"
>
  <h3>
    Apollo
  </h3>
  <div>
    <a
      className="c1 c2"
      href="/"
      onClick={[Function]}
    >
      Dashboard
    </a>
  </div>
  <button
    className="c3 c4 c5"
    onClick={[Function]}
  >
    Log out
  </button>
</div>
`;

exports[`nav bar render admin link for admins 1`] = `
.c3 {
  max-height: 50px;
  padding: 12px;
  border: none;
  border-radius: 5px;
  color: white;
  font-family: 'B612',sans-serif;
  font-size: 1rem;
  font-weight: 700;
  cursor: pointer;
}

.c3:hover {
  opacity: 0.90;
}

.c3:focus {
  outline: none;
}

.c3:active {
  opacity: 0.80;
}

.c3:disabled:hover {
  opacity: 1;
  cursor: auto;
}

.c4 {
  background-color: transparent;
  border: 1px solid;
}

.c1 {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:hover {
  opacity: 0.90;
}

.c0 {
  height: 50px;
  padding: 16px;
  display: grid;
  grid-template-columns: 1fr 8fr [logout];
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  margin-right: 16px;
}

.c5 {
  grid-column: logout;
  float: right;
  width: 100px;
  height: 75%;
}

<div
  className="c0"
>
  <h3>
    Apollo
  </h3>
  <div>
    <a
      className="c1 c2"
      href="/"
      onClick={[Function]}
    >
      Dashboard
    </a>
    <a
      className="c1 c2"
      href="/admin"
      onClick={[Function]}
    >
      Admin
    </a>
  </div>
  <button
    className="c3 c4 c5"
    onClick={[Function]}
  >
    Log out
  </button>
</div>
`;

exports[`nav bar renders correctly 1`] = `
.c3 {
  max-height: 50px;
  padding: 12px;
  border: none;
  border-radius: 5px;
  color: white;
  font-family: 'B612',sans-serif;
  font-size: 1rem;
  font-weight: 700;
  cursor: pointer;
}

.c3:hover {
  opacity: 0.90;
}

.c3:focus {
  outline: none;
}

.c3:active {
  opacity: 0.80;
}

.c3:disabled:hover {
  opacity: 1;
  cursor: auto;
}

.c4 {
  background-color: transparent;
  border: 1px solid;
}

.c1 {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:hover {
  opacity: 0.90;
}

.c0 {
  height: 50px;
  padding: 16px;
  display: grid;
  grid-template-columns: 1fr 8fr [logout];
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  margin-right: 16px;
}

.c5 {
  grid-column: logout;
  float: right;
  width: 100px;
  height: 75%;
}

<div
  className="c0"
>
  <h3>
    Apollo
  </h3>
  <div>
    <a
      className="c1 c2"
      href="/"
      onClick={[Function]}
    >
      Dashboard
    </a>
  </div>
  <button
    className="c3 c4 c5"
    onClick={[Function]}
  >
    Log out
  </button>
</div>
`;
